template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31

# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
Globals:
  Function:
    Timeout: 3

Resources:
  SGBaseIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGBase
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      SourceSecurityGroupId: !GetAtt SGBase.GroupId
  SGBase:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: vpc-eaaf6a82
      GroupDescription: "secret clan Lambda"
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: "0.0.0.0/0"
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
  FileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
  AccessPoint:
    Type: AWS::EFS::AccessPoint
    Properties:
      FileSystemId: !Ref FileSystem
      PosixUser:
        Uid: "1000"
        Gid: "1000"
      RootDirectory:
        CreationInfo:
          OwnerGid: "1000"
          OwnerUid: "1000"
          Permissions: "0777"
        Path: /db
  MountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: FileSystem
      SubnetId: subnet-f529919d
      SecurityGroups:
        - Ref: SGBase
  SecretClanFunction:
    Type: AWS::Serverless::Function
    DependsOn: MountTarget
    Properties:
      PackageType: Image
      ImageUri: 817907346621.dkr.ecr.eu-central-1.amazonaws.com/secret-clan:v4
      Policies:
        - AWSLambdaExecute
        - AmazonElasticFileSystemClientReadWriteAccess
      Events:
        SecretClan:
          Type: Api
          Properties:
            Path: /
            Method: get
      VpcConfig:
        SecurityGroupIds:
          - !Ref SGBase
        SubnetIds:
          - subnet-f529919d
      FileSystemConfigs:
        - Arn: !GetAtt AccessPoint.Arn
          LocalMountPath: /mnt/db
      Environment:
        Variables:
          "SERVER_PORT": 8080
    Metadata:
      DockerTag: secret-clan:latest
      DockerContext: .
      Dockerfile: Dockerfile

Outputs:
  SecretClanApi:
    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
  SecretClanFunction:
    Value: !GetAtt SecretClanFunction.Arn
